--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 <div class="container">
 <h1>Caffè Italia</h1>
 
-
-
 <div class="row">
     <div class="col-sm-8 col-md-6 col-lg-4">
             <h2>Roast</h2>
@@ -31,24 +29,7 @@
             <input id="submit" class="btn form-control btn-danger btn-lg btn-block" type="submit"/>
         </div>
 
-        <!--<div class="box">-->
-            <!--<h2>Roast</h2>-->
-            <!--<form id="2nd choice">-->
-                <!--<label class="renderCoffees"></label>-->
-                <!--<select id="roast-selection2">-->
-                    <!--<option value="light">light</option>-->
-                    <!--<option value="medium">medium</option>-->
-                    <!--<option value="dark">dark</option>-->
-                <!--</select>-->
-            <!--</form>-->
-            <!--<h2>Coffee Name</h2>-->
-            <!--<input type="text" id="myInput2" placeholder="Coffee Name" title="Type in a name2"><br>-->
-            <!--<input id="submit2" class="btn btn-primary btn-lg btn-block" type="submit"/>-->
-        <!--</div>-->
-    <!--</div>-->
-    <div class="col-sm-12
-                col-md-10
-                col-lg-8">
+    <div class="col-sm-12 col-md-10 col-lg-8">
         <div class="box">
             <p id="demo"></p>
             <div class="container" id="coffees">
