--- a/coffee.html
+++ b/coffee.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<div class="jumbotron">
+<div class="">
     <h1 class="center-block text-center" id="coffeeH1">Caffè Italia!</h1>
 </div>
 
