--- a/coffee.html
+++ b/coffee.html
@@ -11,7 +11,7 @@
 
 
 <div>
-    <h1 class="center-block text-center" id="coffeeH1">Caffè Italia!</h1>
+    <h1 class="center-block text-center" id="coffeeH1">Caffè Italia</h1>
 </div>
 
 <nav class="navbar navbar-default">
